Added paste and drop features

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 			<h6>... or enter URL</h6>
 			<input id="url-input" type="url" placeholder="https://example.com/image.png">
 
+			<h6>You can also paste or drop your image to load</h6>
+
 			<button type="submit" form="google-search-form">Search</button>
 		</div>
 	</main>
